manifests/cluster-addons/longhorn/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-longhorn-ui
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-ui

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
      toPorts:
        - ports:
            - port: '8000'
              protocol: TCP

  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-longhorn-manager
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9500'
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: longhorn-system
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns
  namespace: longhorn-system
spec:
  endpointSelector: {}

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-apiserver
  namespace: longhorn-system
spec:
  endpointSelector: {}

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-backup
  namespace: longhorn-system
spec:
  endpointSelector: {}

  egress:
    - toFQDNs:
        - matchName: 'hel1.your-objectstorage.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: share-manager
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      longhorn.io/component: share-manager

  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: '2049'
              protocol: TCP
