manifests/cluster-addons/longhorn/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-tailscale-to-longhorn-ui
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-ui

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: longhorn-ingress
            tailscale.com/parent-resource-ns: longhorn-system
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-longhorn-manager
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9500'
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics
